--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -3,13 +3,13 @@
 \makeatletter\@mkboth{}{Acknowledgements}\makeatother
 
 \begin{itemize}
-	\item Prof. H.W. Jordaan, thank you for all your patience and guidance trough this journey.
+	\item Prof. H.W. Jordaan and Dr. Stephan Busch, thank you for all your patience and guidance trough this journey.
 	\item Pinkmatter for your financial support for taking the risk of investing in me and my future. 
 	I will be enternally grateful. Thank you for letting me feel like part of the company and taking such good care of me during the visits.
-	\item Clarissa, my wife, thank you for all your love and support during the difficult times.
+	\item Clarissa, my wife, thank you for all your love and support during the difficult times and reminding me of my worth.
 	\item My Mother, words cannot describe how much you meant to me during my masters degree.
-	\item My friend and collogues in the ESL, especially Brandon Chetty, Dane Groves and Mark Msonko, who put up with my 'new productivity hacks' and 'crazy ideas', but also keeping me on track.
-	\item God, for all your guidance, support, love and faith in me, even though I didn't deserve it.
+	\item My friend and collogues in the ESL, especially Brandon Chetty, Dane Groves and Mark Msonko, who put up with my 'new productivity hacks' and 'crazy ideas', and also keeping me on track.
+	\item God, for all your guidance, support, love and faith in me,.
 \end{itemize}
 \begin{centering}
 
