--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -8,7 +8,7 @@ Accurate pose estimation is a critical requirement for nanosatellites performing
 \vspace{0.5cm}
 
 \noindent
-A complete MATLAB simulation environment was developed to model the satellite's dynamics, sensor measurements, and image acquisition. The Earth Tracker uses a pinhole camera model to simulate Earth images and applies the Scale-Invariant Feature Transform (SIFT) algorithm to detect and match surface features. These features are integrated into an Extended Kalman Filter (EKF) framework to estimate the full six-degree-of-freedom (6-DOF) state of the satellite, combining visual information with auxiliary sensor data for improved robustness. Comparative analyses with traditional star tracker and GPS-based configurations were conducted to evaluate performance.
+A complete MATLAB simulation environment was developed to model the satellite's dynamics, sensor measurements, and image acquisition. The Earth Tracker uses a pinhole camera model to simulate Earth images and applies the Scale-Invariant Feature Transform (SIFT) algorithm to detect and match surface features. These features are integrated into an Extended Kalman Filter (EKF) to estimate the full six-degree-of-freedom (6-DOF) state of the satellite, combining visual information with auxiliary sensor data for improved robustness. Comparative analyses with traditional star tracker and GPS-based configurations were conducted to evaluate performance.
 
 \vspace{0.5cm}
 
@@ -23,16 +23,16 @@ Results show that the Earth Tracker achieves sub-degree attitude accuracy and re
 \makeatletter\@mkboth{}{\scshape Uittreksel}\makeatother
 
 \noindent
-Akkurate posisie- en houdingbepaling is 'n noodsaaklike vereiste vir nanosatelliete wat betrokke is by aardwaarneming, houdingbeheer en teikenopsporing. Tradisionele benaderings maak staat op sternasporers en GPS-ontvangers, aangevul deur growwe sensors soos magnetometers en son sensors. Alhoewel hierdie oplossings doeltreffend is, is dit dikwels duur, energie-intensief en ongeskik vir hulpbronbeperkte CubeSat-platforms. Hierdie studie stel die \textit{Earth Tracker} bekend, 'n visiegebaseerde navigasiestelsel wat die satelliet se hoofbeeldsensor hergebruik as 'n multifunksionele instrument vir beide houding- en posisieskatting.
+Akkurate posisie- en oriëntasiebepaling is 'n noodsaaklike vereiste vir nanosatelliete wat betrokke is by aardwaarneming, oriëntasiebeheer en teikenopsporing. Tradisionele benaderings maak staat op sternasporers en GPS-ontvangers, aangevul deur growwe sensors soos magnetometers en son sensors. Alhoewel hierdie oplossings doeltreffend is, is dit dikwels duur, energie-intensief en ongeskik vir hulpbronbeperkte CubeSat-platforms. Hierdie studie stel die \textit{Earth Tracker} bekend, 'n visiegebaseerde navigasiestelsel wat die satelliet se hoofbeeldsensor hergebruik as 'n multifunksionele instrument vir beide oriëntasie- en posisie afskatting.
 
 \vspace{0.5cm}
 
 \noindent
-'n Volledige MATLAB-simulasie-omgewing is ontwikkel om die satelliet se dinamika, sensormetings en beeldvorming te modelleer. Die Earth Tracker gebruik 'n gaatjiekamera-model om aardbeelde te simuleer en pas die \textit{Scale-Invariant Feature Transform} (SIFT) algoritme toe om kenmerke op die aardoppervlak te identifiseer en te vergelyk. Hierdie kenmerke word in 'n Uitgebreide Kalman Filter (EKF) raamwerk geïntegreer om die satelliet se volledige ses-vryheidsgraad (6-DOF) toestand te skat, deur visuele data met hulp sensors te kombineer vir groter robuustheid. Vergelykende ontledings met tradisionele sternasporers en GPS-opstellings is uitgevoer om die stelsel se werkverrigting te evalueer.
+'n Volledige MATLAB-simulasie-omgewing is ontwikkel om die satelliet se dinamika, sensormetings en beeldvorming te modelleer. Die Earth Tracker gebruik 'n gaatjiekamera-model om aardbeelde te simuleer en pas die \textit{Scale-Invariant Feature Transform} (SIFT) algoritme toe om kenmerke op die aardoppervlak te identifiseer en te vergelyk. Hierdie kenmerke word in 'n Uitgebreide Kalman Filter (EKF) geïntegreer om die satelliet se volledige ses-vryheidsgraad (6-DOF) toestand af te skat, deur visuele data met hulp sensors te kombineer vir groter robuustheid. Vergelykende ontledings met tradisionele sternasporers en GPS-opstellings is uitgevoer om die stelsel se werkverrigting te evalueer.
 
 \vspace{0.5cm}
 
 \noindent
-Resultate toon dat die Earth Tracker 'n houdingnauwkeurigheid van minder as een graad behaal en betroubare toestandskonvergensie handhaaf onder normale toestande, wat die uitvoerbaarheid van visuele navigasie vir nanosatelliete bevestig. Alhoewel posisieskatting minder akkuraat bly weens geometriese beperkings, demonstreer die bevindings dat beeldladingstelsels 'n praktiese en outonome alternatief bied sonder die behoefte aan toegewyde houding sensors. Hierdie navorsing dra dus by tot die ontwikkeling van kompakte, koste-effektiewe en visiegebaseerde navigasiestelsels vir toekomstige nanosatellietmissies.
+Resultate toon dat die Earth Tracker 'n oriëntasienauwkeurigheid van minder as een graad behaal en betroubare toestandskonvergensie handhaaf onder normale toestande, wat die uitvoerbaarheid van visuele navigasie vir nanosatelliete bevestig. Alhoewel posisieskatting minder akkuraat bly weens geometriese beperkings, demonstreer die bevindings dat beeldladingstelsels 'n praktiese en outonome alternatief bied sonder die behoefte aan toegewyde oriëntasie sensors. Hierdie navorsing dra dus by tot die ontwikkeling van kompakte, koste-effektiewe en visiegebaseerde navigasiestelsels vir toekomstige nanosatellietmissies.
 
 \selectlanguage{english}
