--- a/thesis.tex
+++ b/thesis.tex
@@ -76,7 +76,7 @@
 \bibliography{mybib}
 
 % End matter
-\appendix
-\input{appendices/appendices}
+%\appendix
+%\input{appendices/appendices}
 
 \end{document}
