--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -9,7 +9,7 @@
 	\item Clarissa, my wife, thank you for all your love and support during the difficult times and reminding me of my worth.
 	\item My Mother, words cannot describe how much you meant to me during my masters degree.
 	\item My friend and collogues in the ESL, especially Brandon Chetty, Dane Groves and Mark Msonko, who put up with my 'new productivity hacks' and 'crazy ideas', and also keeping me on track.
-	\item God, for all your guidance, support, love and faith in me,.
+	\item God, for all your guidance, support, love and faith in me.
 \end{itemize}
 \begin{centering}
 
