--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -13,7 +13,7 @@ A complete MATLAB simulation environment was developed to model the satellite's 
 \vspace{0.5cm}
 
 \noindent
-Results show that the Earth Tracker achieves sub-degree attitude accuracy and reliable state convergence under nominal conditions, validating the feasibility of visual navigation for small satellites. Although position estimation remains less precise due to geometric limitations, the findings demonstrate that imaging payloads can provide accurate, autonomous navigation without the need for dedicated attitude sensors. This research thus contributes a significant step toward compact, cost-efficient, and vision-driven navigation systems for future nanosatellite missions.
+Results show that the Earth Tracker achieves Star Tracker attitude accuracy and reliable state convergence under nominal conditions, validating the feasibility of visual navigation for small satellites. Although position estimation remains less precise due to geometric limitations, the findings demonstrate that imaging payloads can provide accurate, autonomous navigation without the need for dedicated attitude sensors. This research thus contributes a significant step toward compact, cost-efficient, and vision-driven navigation systems for future nanosatellite missions.
 
 \newpage
 \selectlanguage{afrikaans}
@@ -33,6 +33,6 @@ Akkurate posisie- en oriëntasiebepaling is 'n noodsaaklike vereiste vir nanosat
 \vspace{0.5cm}
 
 \noindent
-Resultate toon dat die Earth Tracker 'n oriëntasienauwkeurigheid van minder as een graad behaal en betroubare toestandskonvergensie handhaaf onder normale toestande, wat die uitvoerbaarheid van visuele navigasie vir nanosatelliete bevestig. Alhoewel posisieskatting minder akkuraat bly weens geometriese beperkings, demonstreer die bevindings dat beeldladingstelsels 'n praktiese en outonome alternatief bied sonder die behoefte aan toegewyde oriëntasie sensors. Hierdie navorsing dra dus by tot die ontwikkeling van kompakte, koste-effektiewe en visiegebaseerde navigasiestelsels vir toekomstige nanosatellietmissies.
+Resultate toon dat die Earth Tracker 'n oriëntasienauwkeurigheid 'n sternasporer behaal en betroubare toestandskonvergensie handhaaf onder normale toestande, wat die uitvoerbaarheid van visuele navigasie vir nanosatelliete bevestig. Alhoewel posisieskatting minder akkuraat bly weens geometriese beperkings, demonstreer die bevindings dat beeldladingstelsels 'n praktiese en outonome alternatief bied sonder die behoefte aan toegewyde oriëntasie sensors. Hierdie navorsing dra dus by tot die ontwikkeling van kompakte, koste-effektiewe en visiegebaseerde navigasiestelsels vir toekomstige nanosatellietmissies.
 
 \selectlanguage{english}
