--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -3,7 +3,7 @@
 \makeatletter\@mkboth{}{Acknowledgements}\makeatother
 
 \begin{itemize}
-	\item Prof. H.W. Jordaan and Dr. Stephan Busch, thank you for all your patience and guidance trough this journey.
+	\item Prof. Willem Jordaan and Dr. Stephan Busch, thank you for all your patience and guidance trough this journey.
 	\item Pinkmatter for your financial support for taking the risk of investing in me and my future. 
 	I will be enternally grateful. Thank you for letting me feel like part of the company and taking such good care of me during the visits.
 	\item Clarissa, my wife, thank you for all your love and support during the difficult times and reminding me of my worth.
