--- a/mybib.bib
+++ b/mybib.bib
@@ -769,3 +769,40 @@
    note = {https://en.wikipedia.org/wiki/Chromaticaberration},
    year = {2025},
 }
+
+@misc{Towards,
+author = {Jordaan, Hendrik and Busch, Stephan and Garbe, Daniel},
+year = {2023},
+month = {05},
+pages = {},
+title = {Towards payload-in-loop for improved earth observation efficiency}
+}
+
+@misc{Kulu,
+  author       = {Erik Kulu},
+  title        = {Nanosats Database | Constellations, companies, technologies and more},
+  howpublished = {\url{https://www.nanosats.eu/}},
+  year         = {2025},
+  note         = {Accessed: 2025-11-11}
+}
+
+@misc{Copernicus,
+  author       = {{Copernicus Data Space Ecosystem}},
+  title        = {Copernicus Data Space Ecosystem — Browser},
+  note = {\url{https://browser.dataspace.copernicus.eu/}},
+}
+
+@misc{RayIntersection1,
+  author       = {Scratchapixel},
+  title        = {A Minimal Ray-Tracer: Ray-Sphere Intersection},
+  note = {\url{https://www.scratchapixel.com/lessons/3d-basic-rendering/minimal-ray-tracer-rendering-simple-shapes/ray-sphere-intersection.html}},
+  year         = {n.d.},
+}
+
+@misc{RayIntersection2,
+  author       = {viclw17},
+  title        = {Raytracing – Ray Sphere Intersection},
+  note = {\url{https://viclw17.github.io/2018/07/16/raytracing-ray-sphere-intersection}},
+  year         = {2018},
+  month        = {July},
+}
